fix: remove arbitrary styles on mobile screens

--- a/src/app/components/MainContent/Skills/SkillCard/SkillCard.css
+++ b/src/app/components/MainContent/Skills/SkillCard/SkillCard.css
@@ -1,9 +1,9 @@
 .skill-card {
   position: relative;
 
-  height: 13.75rem;
+  height: 12.75rem;
   padding-inline: 1.125rem;
-  width: 13rem;
+  width: calc(100vw - 8rem);
 
   background-color: var(--russian-violet);
   clip-path: polygon(00% 0%, 90% 0%, 100% 10%, 100% 100%, 0% 100%);
@@ -15,7 +15,7 @@
 
   border: 0.25rem inset var(--black-2);
   height: 3rem;
-  width: 9.375rem;
+  width: calc(100% - 0.5rem);
 
   background-color: var(--raisin-black);
   content: "";
@@ -24,14 +24,13 @@
 .skill-card::after {
   display: block;
   position: absolute;
-  z-index: 3;
-
-  height: 2.625rem;
-  width: 7.75rem;
-
+  z-index: 1;
   top: 0;
-  left: 1.375rem;
+  left: 1.5rem;
 
+  height: 2.75rem;
+  width: calc(100% - 3.25rem);
+  
   background-color: var(--lavender-web-2);
   content: "";
 }
@@ -47,12 +46,11 @@
   display: block;
   position: absolute;
   z-index: 4;
+  top: 0;
+  left: 2rem;
 
   height: 2.1875rem;
   width: 1.5rem;
-
-  top: 0;
-  left: 1.75rem;
 
   background-color: var(--black);
   content: "";
@@ -63,7 +61,7 @@
   font-size: 1.75rem;
 
   margin-bottom: 0;
-  margin-top: 3rem;
+  margin-top: 2rem;
   padding: 0.25rem 0.5rem;
   border: 0.25rem outset var(--davys-gray);
 
@@ -86,6 +84,6 @@
   background-color: var(--lavender-web);
   background-size: 1.5rem 1.5rem;
   color: var(--black);
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   line-height: 1.5rem;
 }
